<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">My Application</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nom_de_aliment">nom de aliment</string>
    <string name="nom">nom</string>
    <string name="quantite">quantite</string>
    <string name="date_de_expiration">%1$s-%2$s-%3$s</string>
    <string name="ajouter">ajouter</string>
    <string name="phone">telephone</string>
    <string name="contenu">SMS contenu</string>
    <string name="send">SMS envoyer</string>
    <string name="num">0</string>
    <string name="none"> </string>
    <string name="action_settings">Action Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
