<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollview2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/tel_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone"
                tools:layout_editor_absoluteX="99dp"
                tools:layout_editor_absoluteY="27dp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/sms_text"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:ems="10"
                android:hint="@string/contenu"
                android:inputType="textMultiLine"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="398dp" />

            <Button
                android:id="@+id/send_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>