<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ajouter1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">

    <ScrollView
        android:id="@+id/scrollview1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txt_nomAliment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/nom_de_aliment"
                android:inputType="text"
                app:layout_constraintBottom_toTopOf="@+id/quantite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread_inside" />

            <EditText
                android:id="@+id/quantite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/quantite"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                app:layout_constraintBottom_toTopOf="@+id/ca_expiration"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_nomAliment" />

            <TextView
                android:id="@+id/dateExpiration"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="8dp"
                android:text="@string/date_de_expiration"
                app:layout_constraintBottom_toTopOf="@+id/ca_expiration"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.473"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/quantite"
                app:layout_constraintVertical_bias="0.204" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal" />


            <Spinner
                android:id="@+id/ali_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp" />

            <CalendarView
                android:id="@+id/ca_expiration"
                android:layout_width="match_parent"
                android:layout_height="221dp"
                android:layout_marginStart="69dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="70dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toTopOf="@+id/ajouter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.482"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateExpiration" />

            <Button
                android:id="@+id/ajouter"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="180dp"
                android:layout_marginEnd="180dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>